# practical-haskell

./: .gitignore  README.md  flake.nix
02/: cabal.nix  x02.cabal
02/app/: Main.hs
02/src/: MyLib.hs
