cabal-version:      3.0
name:               x02
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Idris Raja
maintainer:         idris.raja@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ack
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x02,
    hs-source-dirs:   app
    default-language: Haskell2010
